[tool.poetry]
name = "raft"
version = "0.1.0"
description = ""
authors = ["Pechenuxa1 <v.tatarintsev@g.nsu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysyncobj = "^0.3.12"
termcolor = "^2.5.0"
fastapi = "^0.115.4"
httpx = "^0.27.2"
requests = "^2.32.3"
pydantic = "^2.10.1"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
